<resources xmlns:rafa="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Imgur Explorer</string>

    <string name="action_settings">Settings</string>
    <string name="phone_tag">phone_tag</string>
    <string name="tablet_tag">tablet_tag</string>
    <!-- This options are for Settings activity -->
    <string name="sort_list_key">SortBy</string>
    <string name="sort_list_title">Sort Images By</string>
    <string name="sort_list_description">The way that images will be sorted and displayed in the screen</string>
    <string name="sort_list_default_value">viral</string>
    <string name="section_list_key">Category</string>
    <string name="section_list_title">Search section</string>
    <string name="section_list_description">The section of images that will be displayed on screen</string>
    <string name="section_list_default_value">hot</string>
    <string name="window_list_key">Window</string>
    <string name="window_list_title">Date range (Window)</string>
    <string name="window_list_description">The section of images that will be displayed on screen</string>
    <string name="window_list_default_value">hot</string>
    <string-array name="sort_options">
        <item>Viral</item>
        <item>Top</item>
        <item>Time</item>
        <item>Rising (Only available with user section)</item>
    </string-array>
    <string-array name="sort_options_values">
        <item>viral</item>
        <item>top</item>
        <item>time</item>
        <item>rising</item>
    </string-array>
    <string-array name="section_options">
        <item>Hot</item>
        <item>Top</item>
        <item>User</item>
    </string-array>
    <string-array name="section_options_values">
        <item>hot</item>
        <item>top</item>
        <item>user</item>
    </string-array>
    <string-array name="window_options">
        <item>Day (Only available with Top section)</item>
        <item>Week (Only available with Top section)</item>
        <item>Month (Only available with Top section)</item>
        <item>Year (Only available with Top section)</item>
        <item>ALL (Only available with Top section)</item>
    </string-array>
    <string-array name="window_options_values">
        <item>day</item>
        <item>week</item>
        <item>month</item>
        <item>year</item>
        <item>all</item>
    </string-array>
    <string name="layout_list_key">Layout</string>
    <string name="layout_list_title">Gallery Layout</string>
    <string name="layout_list_description">Represents how the images will be presented on screen</string>
    <string name="layout_list_default_value">grid</string>
    <string-array name="layout_options">
        <item>Grid View</item>
        <item>List View</item>
        <item>Staggered Grid View</item>
    </string-array>
    <string-array name="layout_options_values">
        <item>grid</item>
        <item>list</item>
        <item>staggered</item>
    </string-array>
    <string name="viral_checkbox_key">Viral</string>
    <string name="viral_checkbox_title">Showm Viral Results</string>
    <string name="viral_checkbox_summary_on">The viral results will be shown on screen</string>
    <string name="viral_checkbox_summary_off">The viral results will be hide on screen</string>
    <!-- Labels for Details -->
    <string name="description">Imgur image description</string>
    <string name="ups">Ups: <rafa:g id="ups"></rafa:g>%1$1d</string>
    <string name="downs">Downs: <rafa:g id="downs"></rafa:g>%1$1d</string>
    <string name="score">Points and Score</string>
    <string name="votes">Ups and Downs</string>
    <!--About screen-->
    <string name="about">About.</string>
    <string name="title_activity_about_me">AboutMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="personal">Personal info</string>
    <string name="about_title">A little bit about me, contact info, email, hobbies. Feel free to contact me if you want some project we can work together.</string>
    <string name="contact">Contact</string>
    <string name="name">Rafael Domingo Castillo</string>
    <string name="mail">rafabox001@gmail.com</string>
    <string name="role">Android Developer</string>
    <string name="phone">5564922659</string>
    <string name="linkedinUrl">https://mx.linkedin.com/in/rafabox001</string>
    <string name="githubUrl">https://github.com/Rafabox001</string>
    <string name="udacityUrl">https://profiles.udacity.com/u/rafaeldomingo</string>

</resources>
